# Raytra

./: .gitignore  AmbientLight.cc  BVHTree.cc  BoundingBox.cc  CMakeLists.txt  Camera.cc  Camera.h  Light.cc  Makefile  Material.cc  Parser.cc  Plane.cc  Point.cc  Point.h  PointLight.cc  README.md  Ray.cc  Ray.h  Sphere.cc  Surface.cc  Triangle.cc  Vector.cc  Vector.h  compile.sh  main.cc  parse.cc  parser.cc  prp.cc  run.sh  sphere_grid.scn  sphere_grid1.scn  test.sh
include/: AmbientLight.h  BVHNode.h  BVHTree.h  BoundingBox.h  Camera.h  Light.h  Material.h  Parser.h  Plane.h  Point.h  PointLight.h  ProgressBar.h  RGB.h  Ray.h  Sphere.h  Surface.h  Triangle.h  Vector.h  parser.h
scenes/: bunny.scn  bunny2.scn  checkerboard.scn  chess.scn  cornell_box.scn  dodeca.scn  pooltable.scn  reverse_triangle.scn  scene.scn  simple.scn  sphere_grid.scn  sphere_grid1.scn  spheres_trianges.scn  spiral.scn  streetlamp_scene.scn  teapot.scn  teapot2.scn  triangle.scn  triangle2.scn  triangle_plane.scn
specs/: BoundingBoxSpecs.cc  PointSpecs.cc  RaySpecs.cc  SphereSpecs.cc  TriangleSpec.cc  VectorSpecs.cc  specs.cc
specs/lib/: catch.hpp
surfaces/: Sphere.cc
tests/: VectorSpecs.cc
